--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
+    "reselect": "^5.0.0-rc.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
