--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-google-button": "^0.8.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
